Fixed Education page moving right whenever the scrollbar disappears and reduced the loading animation time to 1.6 seconds instead of 5.2

--- a/myStyle.css
+++ b/myStyle.css
@@ -33,6 +33,7 @@ body {
 	font-family: nobel-light!important;
   margin: 0;
   padding: 0;
+  overflow-y: scroll;
 	//background-image: url("images/computer.jpg");
 	//background-repeat: no-repeat;
 }
